fix(styling): small Composite Editor fixes for Dark Mode

--- a/packages/common/src/styles/_variables.scss
+++ b/packages/common/src/styles/_variables.scss
@@ -623,6 +623,7 @@ $slick-editor-modal-reset-btn-color:                        #333 !default;
 $slick-editor-modal-reset-btn-bg-color:                     #fff !default;
 $slick-editor-modal-slider-editor-value-height:             $slick-editor-modal-input-editor-height !default;
 $slick-editor-modal-slider-editor-value-min-height:         100% !default;
+$slick-editor-modal-text-color:                             #000 !default;
 $slick-editor-modal-title-font-color:                       #333333 !default;
 $slick-editor-modal-title-font-size:                        20px !default;
 $slick-editor-modal-title-font-weight:                      500 !default;
@@ -1093,6 +1094,7 @@ $slick-empty-data-warning-z-index:                          10 !default;
   --slick-editor-modal-title-font-color:                  var(--slick-font-color);
   --slick-editor-modal-validation-color:                  var(--slick-base-dark-invalid-color);
   --slick-editor-modal-validation-summary-color:          var(--slick-base-dark-invalid-color);
+  --slick-editor-modal-text-color:                        var(--slick-base-dark-text-color);
   --slick-large-editor-background-color:                  var(--slick-base-dark-menu-bg-color);
   --slick-large-editor-border:                            2px solid #565656;
   --slick-large-editor-text-color:                        var(--slick-base-dark-text-color);
